--- a/work/writing/index.html
+++ b/work/writing/index.html
@@ -35,7 +35,7 @@
 
 		  <a class="card" href="/work/writing/adoption-is-a-design-problem.html">
 			<h3 class="card-title">Adoption is a design problem</h3>
-			<p class="card-body">Adoption is about time, trust, risk, switching costs — and fit.</p>
+			<p class="card-body">Adoption is about time, trust, risk, switching costs, and fit.</p>
 			<span class="card-cta">Read <span class="arrow">→</span></span>
 		  </a>
 		</div>
@@ -76,7 +76,7 @@
 		  <a href="/work/writing/adoption-is-a-design-problem.html" class="article-item">
 			<div class="article-item-content">
 			  <h3 class="article-item-title">Adoption is a design problem</h3>
-			  <p class="article-item-excerpt">Adoption is about time, trust, risk, switching costs — and fit.</p>
+			  <p class="article-item-excerpt">Adoption is about time, trust, risk, switching costs, and fit.</p>
 			  <div class="article-item-meta">
 				<span class="article-item-date">2024</span>
 				<span class="article-item-reading">10 min read</span>
