--- a/work/writing/the-stove-problem-revisited.html
+++ b/work/writing/the-stove-problem-revisited.html
@@ -8,8 +8,17 @@
 	<title>The stove problem, revisited — Deliberate UX</title>
 	<meta
 	  name="description"
-	  content="Bad mapping teaches workarounds. Fixing mapping is a reliability and safety win."
+	  content="The classic stove-knob mapping problem reveals how bad control layouts train users to compensate. Fixing mapping is a reliability and safety decision, not a cosmetic one."
 	/>
+	<meta name="author" content="Deliberate UX" />
+	<meta property="og:title" content="The stove problem, revisited — Deliberate UX" />
+	<meta property="og:description" content="Bad mapping teaches workarounds. Fixing mapping is a reliability and safety win." />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://deliberateux.com/work/writing/the-stove-problem-revisited.html" />
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:title" content="The stove problem, revisited — Deliberate UX" />
+	<meta name="twitter:description" content="Bad mapping teaches workarounds. Fixing mapping is a reliability and safety win." />
+	<link rel="canonical" href="https://deliberateux.com/work/writing/the-stove-problem-revisited.html" />
 
 	<link rel="icon" href="/assets/favicon.svg" type="image/svg+xml" />
 	<link rel="stylesheet" href="/styles.css" />
@@ -47,45 +56,29 @@
 		<div class="article-illustration">
 		  <div class="illustration-stove">
 			<div class="stove-row">
-			  <div class="burner"></div>
-			  <div class="burner"></div>
+			  <div class="burner">
+				<span class="burner-label">?</span>
+			  </div>
+			  <div class="burner burner-on">
+				<span class="burner-label"></span>
+			  </div>
 			</div>
 			<div class="stove-row">
-			  <div class="burner"></div>
-			  <div class="burner"></div>
+			  <div class="burner">
+				<span class="burner-label">?</span>
+			  </div>
+			  <div class="burner">
+				<span class="burner-label"></span>
+			  </div>
 			</div>
 			<div class="knob-row">
-			  <div class="knob">1</div>
-			  <div class="knob">2</div>
-			  <div class="knob">3</div>
+			  <div class="knob knob-mystery">?</div>
+			  <div class="knob knob-mystery">?</div>
+			  <div class="knob knob-active">3</div>
 			  <div class="knob">4</div>
 			</div>
 		  </div>
-		  <p class="illustration-caption">Classic stove mapping problem: linear knobs controlling a 2×2 grid. Which knob controls which burner?</p>
-		</div>
-
-		<!-- Illustration: Knob confusion -->
-		<div class="article-illustration">
-		  <div class="illustration-knob-confusion">
-			<div class="knob-zoom">
-			  <div class="knob-large">2</div>
-			</div>
-			<div class="confusion-arrows">
-			  <div class="arrow-target arrow-tl">
-				<span class="target-dot"></span>
-				<span class="target-label">?</span>
-			  </div>
-			  <div class="arrow-target arrow-tr">
-				<span class="target-dot"></span>
-				<span class="target-label">?</span>
-			  </div>
-			  <div class="arrow-target arrow-bl">
-				<span class="target-dot"></span>
-				<span class="target-label">?</span>
-			  </div>
-			</div>
-		  </div>
-		  <p class="illustration-caption">Which burner? The knob doesn't tell you.</p>
+		  <p class="illustration-caption">One knob is turned. The burner glows, but which knobs control the other two?<sup><a href="#fn1" class="fn-ref">1</a></sup></p>
 		</div>
 
 		<div class="callout">
@@ -95,54 +88,152 @@
 		<div class="article-body">
 		  <h2>What "bad mapping" actually costs</h2>
 		  <p>
-			Stove knobs are the canonical example because the consequence is visible: the wrong burner turns on.
-			But the pattern shows up everywhere: forms, admin consoles, agent tools, and "simple" settings screens.
+			Stove knobs are the canonical example of poor mapping because the consequence is visible
+			and immediate: you turn a knob, the wrong burner lights up. But the stove is just a stand-in
+			for a much larger category of design failure. The same pattern shows up in admin consoles with
+			settings that don't correspond to what they control, in forms where field order contradicts the
+			user's mental model, and in agent tools where buttons trigger actions on objects that aren't
+			visually related.
 		  </p>
 		  <p>
-			The cost isn't just errors. It's the cognitive overhead of translating between what you see
-			and what you want. Every time a user has to think "wait, which one is it?" the interface has
-			failed, even if they get it right.
+			Norman described this gap as the "Gulf of Execution": the distance between what a user intends
+			and what the interface makes possible to express.<sup><a href="#fn2" class="fn-ref">2</a></sup>
+			The wider that gulf, the more cognitive work falls on the user. They have to maintain a
+			translation layer in their head, converting between what they want and what the system expects.
+		  </p>
+		  <p>
+			The cost isn't just the occasional wrong burner. It's the overhead of translating on every
+			interaction. Every time a user pauses to think "wait, which one is it?" the interface has
+			failed, even if they ultimately get it right. That pause is invisible in analytics.
+			It doesn't show up as an error. But it accumulates into fatigue, slowness, and quiet
+			resentment toward tools that should be effortless.
+		  </p>
+
+		  <p class="pullquote">
+			The worst mapping problems are the ones users have stopped noticing, because
+			they've already absorbed the cost.
 		  </p>
 
 		  <h2>Why workarounds feel like competence</h2>
 		  <p>
-			People adapt. They learn the quirks, build muscle memory, and teach others. The system interprets this
-			as "good enough," even though the product is quietly training users to compensate.
+			People are remarkably good at adapting. They learn the quirks, build muscle memory, and teach
+			each other. Over time, the workaround becomes invisible. It stops being a workaround and
+			becomes "just how it works." The organization interprets this adaptation as evidence that the
+			design is fine, even though the product is quietly training users to compensate for its failures.
 		  </p>
 		  <p>
-			This is why bad mapping persists: once users have learned to work around it, fixing it feels
-			like disruption rather than improvement. "Everyone knows how it works" becomes a reason not
-			to make it work better.
+			This creates a reinforcing cycle. Users who have invested effort in learning a broken model
+			are often the loudest voices against fixing it. They've earned fluency through struggle, and
+			changing the interface invalidates that investment. "Everyone knows how it works" becomes a
+			reason not to make it work better.
+		  </p>
+		  <p>
+			Norman observed a related pattern: users tend to blame themselves rather than the design.
+			When something goes wrong, people assume they did it incorrectly, not that the interface
+			misled them.<sup><a href="#fn3" class="fn-ref">3</a></sup> This self-blame is a powerful
+			shield for bad mapping. If users don't identify the design as the problem, they never
+			request a fix. The interface survives not because it's good, but because its failures
+			are attributed to human error rather than structural ambiguity.
 		  </p>
 
 		  <h2>Fixing mapping is a systems decision</h2>
 		  <p>
-			Mapping problems persist when incentives reward shipping more screens instead of removing ambiguity.
-			The fix is often small, but it requires someone to prioritize reduction over addition.
+			Mapping problems rarely persist because nobody sees them. They persist because the incentive
+			structure doesn't reward fixing them. Shipping a new feature is visible. Rearranging controls
+			so they correspond to what they actually do is not. The fix is often small in implementation
+			but requires someone with authority to prioritize reduction over addition.
 		  </p>
 		  <p>
-			Good mapping isn't about labels or tooltips. It's about spatial correspondence: the control
-			should be where you expect it, doing what you expect, with feedback that confirms.
+			Good mapping isn't about labels or tooltips. Labels are a patch for broken spatial
+			relationships. If you need a label to explain which control goes with which outcome, the
+			layout itself has already failed. Norman's principle of natural mapping asks for something
+			more fundamental: arrange controls so their position corresponds to the position of what
+			they affect.<sup><a href="#fn4" class="fn-ref">4</a></sup> When you do that, the interface
+			becomes self-explanatory. The need for labels, legends, and training materials drops away.
+		  </p>
+		  <p>
+			This is why mapping is a systems decision, not a surface-level design task. It requires
+			rethinking layout, information architecture, and sometimes hardware constraints. It means
+			accepting that the current arrangement, however familiar, is costing more than it should.
+		  </p>
+
+		  <p class="pullquote">
+			If you need a label to explain which control goes with which outcome, the layout has
+			already failed.
 		  </p>
 
 		  <h2>The cost of "good enough"</h2>
 		  <p>
-			Every mapping problem is a small tax on attention. In low-stakes contexts, people pay it without
-			noticing. In high-stakes contexts (medical devices, industrial controls, financial systems) the
-			same pattern becomes dangerous.
+			Every mapping problem is a small tax on attention. In low-stakes contexts, people pay that
+			tax without complaint. You turn the wrong burner on at home, you notice, you switch it. The
+			cost is a few seconds and minor annoyance.
+		  </p>
+		  <p>
+			But the same structural problem in a high-stakes environment becomes dangerous. Medical
+			device research has found that poor control-display mapping is a leading contributor to
+			use-related adverse events.<sup><a href="#fn5" class="fn-ref">5</a></sup> In industrial
+			controls, the wrong valve opened at the wrong time has caused equipment damage and safety
+			incidents. In financial systems, mismatched control layouts have led to trades executed
+			on the wrong account.
+		  </p>
+		  <p>
+			The pattern is the same in every case. The interface asks users to maintain a mental
+			translation between what they see and what they mean. Under normal conditions, they
+			manage. Under stress, fatigue, or time pressure, the translation breaks down. The
+			question isn't whether mapping matters. It's whether you can afford to find out when
+			it doesn't.
 		  </p>
 
 		  <h2>A practical checklist</h2>
 		  <ul>
 			<li>Can a first-time user predict the outcome before acting?</li>
 			<li>Does the control layout match the real-world layout?</li>
-			<li>Are labels redundant with the visual structure (or compensating for bad structure)?</li>
+			<li>Are labels redundant with the visual structure, or compensating for bad structure?</li>
 			<li>Can mistakes be reversed safely?</li>
 			<li>Is the "correct" action the easiest action?</li>
 			<li>Would removing something make the mapping clearer?</li>
 		  </ul>
 		</div>
+
+		<footer class="article-footnotes" role="doc-endnotes">
+		  <ol>
+			<li id="fn1">
+			  The stove mapping problem was introduced by Don Norman as a canonical example of poor
+			  natural mapping. <span class="fn-source">Norman, D. (2013). The Design of Everyday Things,
+			  Revised & Expanded Edition. Basic Books, pp. 70–75.</span>
+			  <a href="#fn1" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+			<li id="fn2">
+			  The "Gulf of Execution" describes the difficulty of figuring out how to make a system do
+			  what you want. Its counterpart, the "Gulf of Evaluation," concerns understanding what happened.
+			  <span class="fn-source">Norman, D. (2013). The Design of Everyday Things, pp. 38–42.</span>
+			  <a href="#fn2" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+			<li id="fn3">
+			  Norman describes this self-blame tendency as "learned helplessness" in everyday interactions:
+			  people assume they are at fault when technology is difficult.
+			  <span class="fn-source">Norman, D. (2013). The Design of Everyday Things, pp. 62–66.</span>
+			  <a href="#fn3" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+			<li id="fn4">
+			  Natural mapping uses spatial analogy to create an immediate, intuitive relationship between
+			  control and outcome, reducing the need for labels or instructions.
+			  <span class="fn-source">Norman, D. (2013). The Design of Everyday Things, pp. 115–122.</span>
+			  <a href="#fn4" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+			<li id="fn5">
+			  <span class="fn-source">Zhang, J., Johnson, T. R., Patel, V. L., Paige, D. L., & Kubose, T.
+			  (2003). Using usability heuristics to evaluate patient safety of medical devices.
+			  Journal of Biomedical Informatics, 36(1–2), 23–30.</span>
+			  <a href="#fn5" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+		  </ol>
+		</footer>
+
 	  </article>
+	  <a href="/work/writing/" class="article-back-link">
+		<span class="back-arrow">&larr;</span> Writing
+	  </a>
 	</main>
   </body>
 </html>
