--- a/work/writing/why-good-ux-still-fails.html
+++ b/work/writing/why-good-ux-still-fails.html
@@ -8,8 +8,17 @@
 	<title>Why good UX still fails — Deliberate UX</title>
 	<meta
 	  name="description"
-	  content="Great interaction design can still lose to incentives, operations, and time. Most product "UX failures" are system failures."
+	  content="Great interaction design can still lose to misaligned incentives, operational friction, and time constraints. Most product UX failures are system failures in disguise."
 	/>
+	<meta name="author" content="Deliberate UX" />
+	<meta property="og:title" content="Why good UX still fails — Deliberate UX" />
+	<meta property="og:description" content="Great interaction design can still lose to incentives, operations, and time. Most product UX failures are system failures." />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://deliberateux.com/work/writing/why-good-ux-still-fails.html" />
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:title" content="Why good UX still fails — Deliberate UX" />
+	<meta name="twitter:description" content="Great interaction design can still lose to incentives, operations, and time. Most product UX failures are system failures." />
+	<link rel="canonical" href="https://deliberateux.com/work/writing/why-good-ux-still-fails.html" />
 
 	<link rel="icon" href="/assets/favicon.svg" type="image/svg+xml" />
 	<link rel="stylesheet" href="/styles.css" />
@@ -62,16 +71,31 @@
 		<div class="article-body">
 		  <h2>The three layers UX can't out-design</h2>
 		  <p>
-			Designers often focus on the interaction layer: buttons, flows, visual hierarchy. But adoption
-			happens at deeper layers that the UI can't reach. A beautifully designed tool will still fail
-			if it's fighting the system it lives in.
+			Designers often focus on the interaction layer: buttons, flows, visual hierarchy. That
+			focus is appropriate and necessary. But adoption happens at deeper layers that the UI
+			can't reach.<sup><a href="#fn1" class="fn-ref">1</a></sup> A beautifully designed tool
+			will still fail if it's fighting the system it lives in.
+		  </p>
+		  <p>
+			This is a difficult truth for design teams because the interaction layer is where they
+			have the most control. Pixel-perfect screens, elegant transitions, thoughtful micro-copy.
+			None of it matters if the organization around the product is optimizing for something else.
+			The system has its own momentum, and that momentum doesn't care about your Figma file.
 		  </p>
 
 		  <h3>1) Incentives</h3>
 		  <p>
-			If leadership celebrates speed-to-launch, teams optimize for shipping, not learning. If sales promises
-			"one-click magic," the product absorbs complexity until it breaks. The incentive structure determines
-			what gets built, how it gets maintained, and whether anyone has time to fix what's broken.
+			If leadership celebrates speed-to-launch, teams optimize for shipping, not learning. If
+			sales promises "one-click magic," the product absorbs complexity until it breaks. The
+			incentive structure determines what gets built, how it gets maintained, and whether
+			anyone has time to fix what's broken.<sup><a href="#fn2" class="fn-ref">2</a></sup>
+		  </p>
+		  <p>
+			This is not abstract. It shows up in specific, recurring patterns. The PM who can't
+			justify a sprint on "making the existing thing less confusing" because the roadmap is
+			measured in new features. The designer who flags a usability issue that never gets
+			prioritized because it doesn't move a metric anyone is tracking. The engineer who knows
+			the workaround but doesn't have time to fix the root cause.
 		  </p>
 		  <p>
 			<strong>The symptom:</strong> Features ship fast but don't stick. Users complain, but roadmaps
@@ -80,24 +104,46 @@
 
 		  <h3>2) Operations</h3>
 		  <p>
-			UX fails when the operational reality isn't designed. Workarounds become the real interface.
-			The tool assumes a clean workflow; the actual workflow involves three spreadsheets, a Slack channel,
-			and tribal knowledge about which fields to skip.
+			UX fails when the operational reality isn't designed for. Workarounds become the real
+			interface. The tool assumes a clean workflow; the actual workflow involves three
+			spreadsheets, a Slack channel, and tribal knowledge about which fields to
+			skip.<sup><a href="#fn3" class="fn-ref">3</a></sup>
+		  </p>
+		  <p>
+			Operational friction is especially insidious because it's invisible to anyone who
+			isn't doing the work. Executives see dashboards. Product managers see feature lists.
+			Designers see prototypes. But the person using the tool eight hours a day sees the gap
+			between what the system assumes and what the day actually looks like. That gap is where
+			adoption goes to die.
 		  </p>
 		  <p>
 			<strong>The symptom:</strong> Users technically "use" the tool but route around it constantly.
 			Time-on-task stays high. Training doesn't help.
 		  </p>
 
+		  <p class="pullquote">
+			The person using the tool eight hours a day sees the gap between what the system
+			assumes and what the day actually looks like. That gap is where adoption goes to die.
+		  </p>
+
 		  <h3>3) Time</h3>
 		  <p>
-			Time is the universal constraint. If your tool asks for time people don't have, they'll rationally decline,
-			even if it's "better." A 30-second improvement per task sounds small until you multiply it by
-			200 tasks per day across 5,000 agents.
+			Time is the universal constraint. If your tool asks for time people don't have, they'll
+			rationally decline, even if the tool is genuinely "better." A 30-second improvement per
+			task sounds small until you multiply it by 200 tasks per day across 5,000 agents. That
+			kind of math can justify significant investment, but only if you account for the learning
+			curve on the other side.
 		  </p>
 		  <p>
-			<strong>The symptom:</strong> Pilots succeed (people have time to learn), but rollout fails
-			(people don't have time to change).
+			The problem is that time savings are realized gradually, while time costs are paid
+			immediately. A new tool has to be learned today. Its benefits arrive later, if at all.
+			For someone under production pressure, that trade-off rarely makes sense. The rational
+			choice is to stick with the familiar tool, even a worse one, because the familiar tool
+			doesn't cost learning time.
+		  </p>
+		  <p>
+			<strong>The symptom:</strong> Pilots succeed (participants have time to learn), but rollout fails
+			(the broader population doesn't have time to change).
 		  </p>
 
 		  <h2>What this means for design practice</h2>
@@ -105,6 +151,13 @@
 			Understanding these layers doesn't mean giving up on craft. It means expanding the definition
 			of the problem. The question isn't just "Is this usable?" but "Is this adoptable given the
 			system it lives in?"
+		  </p>
+		  <p>
+			Practically, this means designers need to spend more time understanding the environment
+			their product will live in. Who has authority to change workflows? What is the team
+			actually measured on? How much slack exists in people's days? These questions feel like
+			they belong to product management or operations, but they directly determine whether
+			design work has any impact at all.
 		  </p>
 
 		  <h2>A diagnostic prompt</h2>
@@ -115,7 +168,34 @@
 			<li>What would have to be true for this tool to stick?</li>
 		  </ul>
 		</div>
+
+		<footer class="article-footnotes" role="doc-endnotes">
+		  <ol>
+			<li id="fn1">
+			  Donella Meadows described systems as having leverage points: places where small shifts
+			  produce large behavioral changes. The UI is rarely one of them.
+			  <span class="fn-source">Meadows, D. (2008). Thinking in Systems: A Primer. Chelsea Green Publishing, pp. 145–165.</span>
+			  <a href="#fn1" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+			<li id="fn2">
+			  Kerr's classic paper on incentive misalignment remains one of the clearest descriptions
+			  of how organizations reward the wrong behavior.
+			  <span class="fn-source">Kerr, S. (1975). On the folly of rewarding A, while hoping for B. Academy of Management Journal, 18(4), 769–783.</span>
+			  <a href="#fn2" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+			<li id="fn3">
+			  Suchman's research on situated action showed that real-world work rarely follows the
+			  plans and procedures that systems are designed around.
+			  <span class="fn-source">Suchman, L. (1987). Plans and Situated Actions. Cambridge University Press.</span>
+			  <a href="#fn3" class="fn-back" aria-label="Back to text">&uarr;</a>
+			</li>
+		  </ol>
+		</footer>
+
 	  </article>
+	  <a href="/work/writing/" class="article-back-link">
+		<span class="back-arrow">&larr;</span> Writing
+	  </a>
 	</main>
   </body>
 </html>
